--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.0.2",
   "description": "lavatube",
   "main": "src/index.js",
+  "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
+  },
+  "scripts": {
+    "build-dev": "webpack --config ./webpack.config.js",
+    "build-prod": "webpack --config ./webpack.prod.config.js",
+    "build": "yarn build-prod & yarn build-dev"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lavamoat/lavatube.git"
