--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.5.4",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build-dev": "webpack --config ./webpack.config.js",
-    "build-prod": "webpack --config ./webpack.prod.config.js",
-    "build": "yarn build-prod & yarn build-dev"
+    "start": "webpack serve --config ./webpack.config.js",
+    "build": "webpack --config ./webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
