--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@lavamoat/lavatube",
   "version": "0.2.3",
   "description": "lavatube",
-  "main": "src/index.js",
+  "type": "module",
+  "module": "src/index.js",
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
