--- a/package.json
+++ b/package.json
@@ -5,17 +5,10 @@
   "type": "module",
   "module": "src/index.js",
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.5.4",
-    "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.15.1"
+    "http-server": "^14.1.1"
   },
   "scripts": {
-    "start": "webpack serve --config ./webpack.config.js",
-    "build": "webpack --config ./webpack.prod.config.js"
+    "start": "http-server . -p 9000"
   },
   "repository": {
     "type": "git",
