--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "module": "src/index.js",
   "devDependencies": {
+    "ava": "^6.0.1",
     "http-server": "^14.1.1"
   },
   "scripts": {
-    "start": "http-server . -p 9000"
+    "start": "http-server . -p 9000",
+    "test": "ava test/*.js"
   },
   "repository": {
     "type": "git",
