--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "module": "src/index.js",
   "devDependencies": {
     "ava": "^6.0.1",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "nodemon": "^3.0.2"
   },
   "scripts": {
     "start": "http-server . -p 9000",
-    "test": "ava test/*.js"
+    "test": "ava test/*.js",
+    "test:dev": "nodemon ./test --exec 'yarn test'"
   },
   "repository": {
     "type": "git",
